# master-thesis

./: .gitignore  README.md  macros.sty  notes.typ  ref.bib  thesis.lol  thesis.tex  todo
rescu/: .gitignore  .ocamlformat  LICENSE  README.md  benchmark.sh  dune  dune-project  dune-workspace  makefile  rescu.opam
rescu/examples/benchmark/: 11_ftp.scm  27_ssh.scm  NonRegular.scm  http-fsm.scm  pop3.scm  ring.scm
rescu/examples/kmc/: AlternatingBit.scm  Bargain.scm  CloudSystemV4.scm  CloudSystemVFour.scm  FilterCollaboration.scm  HealthSystem.scm  Logistic.scm  SanitaryAgency.scm  TPMContract.scm  autotest1.scm  ce-reduced-obi.scm  ce-rts-finite-mini.scm  ce-rts-finite.scm  client-server-logger.scm  commit-protocol.scm  concur18ce-fsm.scm  devsystem-fsm.scm  elevator-csa.scm  elevator-extra-variant.scm  elevator-extra.scm  elevator.scm  ex-benchmark.scm  fibo.scm  fourplayergamer.scm  infsndad.scm  negotiate.scm  philo-bad-directed-simp.scm  philo-bad-directed.scm  philo-bad.scm  philo-nondet.scm  philo.scm  rock-paper-scissor-rec.scm  rock-paper-scissor-simp.scm  rock-paper-scissor.scm  sh.scm  smtp.scm  travel-agency.scm
rescu/examples/mcscm/: BAwCC.scm  BAwCC_enh.scm  BAwPC.scm  BAwPC_enh.scm  Nested.scm  brp_like.scm  con_disc_reg.scm  load_balancing.scm  load_balancing_err.scm  peterson_3.scm  simple_server.scm  sliding.scm  tcp_simplest.scm  tcp_simplest_err.scm
rescu/examples/papers/: client_server_database.scm  counter_rsc.scm  csd_ex.scm  non_regular_rs.scm  rsc_bag.scm
rescu/examples/stabc-p2p/: 10_online_stock_broker.scm  11_ftp.scm  12_client_server.scm  13_mars_explo.scm  15_e_museum.scm  16_client_supplier.scm  17_restaurant_service.scm  18_travel_agency.scm  19_vending_machine.scm  20_travel_agency.scm  21_train_statin.scm  22_factory_job_manager.scm  23_bug_repport_repo.scm  24_cloud_application.scm  25_sanitary_agency.scm  26_sql_server.scm  27_ssh.scm  28_booking_system.scm  EX001.scm  (+217 more)
rescu/lib/: dune
rescu/man/: scm.5
(+314 files in other folders)
